# hstalk-monitor

./: INSTALL.mdown  README.mdown
client/: .rvmrc  Gemfile  config.rb
client/source/: index.html.erb
client/source/javascripts/: all.js  application.coffee
client/source/javascripts/controllers/: application_controller.coffee  tube_controller.coffee  tubes_controller.coffee
client/source/javascripts/models/: socket.coffee
client/source/javascripts/templates/: application.hbs  tube.hbs  tube_list.hbs
client/source/javascripts/views/: application_view.coffee  tube_view.coffee  tubes_view.coffee
client/source/layouts/: layout.erb  layout.haml
client/source/stylesheets/: application.css.less
server/: Main.hs  THOUGHTS  server.cabal
server/Beaninfo/: Messages.hs  Stalker.hs  Strategies.hs  Types.hs  WebSockets.hs
server/Beaninfo/Server/: Cacher.hs  Clients.hs  States.hs  Strategies.hs
server/Beaninfo/Stalker/: Cacher.hs  Server.hs
server/Beaninfo/WebSockets/: Protocol.hs  Server.hs  States.hs
