name:                server
version:             0.1.0.0
synopsis:            Simple WS-server for giving some beanstalkd info to clients
-- description:         
homepage:            http://github.com/DeTeam
license:             MIT
license-file:        LICENSE
author:              DeTeam
maintainer:          timur.deteam@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  -- exposed-modules:     
  -- other-modules:       
  build-depends:
    base ==4.5.*,
    websockets ==0.7.*,
    async ==2.0.*,
    hbeanstalk ==0.2.*,
    aeson ==0.6.*
    warp ==1.3.4.*,
    wai ==1.3.*
    wai-websockets ==1.3.*